3 November 2006: Wouter
	- Created tags/NSD_3_0_2_REL.

2 November 2006: Wouter
	- Added pdf for differences.tex for ease of use.
	- Updated text in readme on memory usage.

24 October 2006: Wouter
	- Recycle rrset memory after doing special processing on the deleted
	  rrset data.
	- log message clearer for 'duplicate xfr part' to 'discarding partial
	  xfr part'.
	- if you have a server that has IXFR turned off but sends a TC flag
	  for IXFR queries, xfrd will retry to TCP. This makes the use of
	  'AXFR' flag in nsd.conf file not needed in certain cases.
	- Be thrifty and save up the memory that was lost at end of chunks
	  in the recycle bin. Saved 1.3Mb on 170(rrs)/220(total) Mb dataset.

23 October 2006: Wouter
	- Added checks for out of memory in reload (diff file). And it exits
	  if so neatly.

13 October 2006: Wouter
	- Bug #149: Wrong text for NOTAUTH error code. When notify is not
	  authorised REFUSED error code returned instead.

4 October 2006: Wouter
	- More fixes from Koh-ichi Ito (kohi@iri.co.jp now), for bug #146,
	  his bash does not do $(( )), so nsdc.sh has to use test of course.

29 September 2006: Wouter
	- recyclebin works, added a test that uses it (about 3 Mb goes
	  through the recyclebin). This resolves bug #147.
	- Made -L 1 logging is little less verbose (-L 2 gets it all).
	- added search path for openssl on Solaris 10 (/usr/sfw).

28 September 2006: Wouter
	- Removed unused global variable current_region,
	  and routines for it in region-allocator.c and .h.
	- Added recycle option to regions. It will keep track of small
	  objects in a recycle bin. Large objects are deallocated.
	  No calls to recycle yet, unit test it first.
	- added unit test for region recycle.

27 September 2006: Wouter
	- Further suggestion from Koh-ichi Ito, I've set opt->xfrdfile
	  to XFRDFILE in options_create. So opt->xfrdfile and opt->difffile
	  are never NULL. This simplifies code elsewhere.
	  And also handles chroot case (+=l) for default values.